set units for r correctly when cosmology changes

--- a/examples/halomod-fit.config
+++ b/examples/halomod-fit.config
@@ -24,9 +24,13 @@
 
 [Data] #########################################################################
 # data_file is a file with 2 (or optionally 3) columns. The first column is the 
-# ordinate values to fit to (eg. r/h), and the second is the values of the fitted
+# ordinate values to fit to (eg. r), and the second is the values of the fitted
 # quantity (eg. xi). The third column, if present, is the std. dev., which will
 # be used to calculate the chi^2 likelihood if present. 
+# Importantly, the ordinate values should be in units without h-dependence.
+# This is so the fit can be adjusted (perhaps on the fly) to match the same
+# ordinate values. The fitted quantity should be in the same units as the 
+# HaloModel quantity.
 # If cov_file is present, it will be preferentially used to calculate the chi^2
 # likelihood. It should contain a square covariance matrix, the same length as
 # the data in data_file.
