added store_class parameter to halomod-fit (and config) and added a dynamic get_halomodel routine also fixed a leftover from testing which cut the correlation above r = 0.67 fixed a bug in the cm_relation

--- a/examples/halomod-fit.config
+++ b/examples/halomod-fit.config
@@ -55,6 +55,7 @@ relax       = False      ;
 nthreads    = 8          ; Number of threads to use
 quantity    = projected_corr_gal  ; the name of the actual quantity to fit
 der_params  = ["hod_params:M_min","bias_effective","satellite_fraction","mass_effective"]
+store_class = False      ; Store entire class as pickle file (WARNING: may not be very portable)
 
 [MCMC] #########################################################################
 nsamples    = 100      ; Number of samples to run (per walker)
