dynamically check burn-in

--- a/examples/halomod-fit.config
+++ b/examples/halomod-fit.config
@@ -58,6 +58,13 @@ der_params  = ["hod_params:M_min","bias_effective","satellite_fraction","mass_ef
 store_class = False      ; Store entire class as pickle file (WARNING: may not be very portable)
 
 [MCMC] #########################################################################
+# Here the total number of samples will be nsamples*nwalkers
+# The burnin can be specified as an integer, or as a list of 3 numbers: [min,s,max]
+# In this case, min iterations will definitely be burnt in. Then it will try
+# to keep running until s*acorr < chain_length. Usual values of s may be ~5.
+# It will stop at max and continue with the main calculation, though this
+# may indicate an error
+
 nsamples    = 100      ; Number of samples to run (per walker)
 burnin      = 0        ; Burnin size (per walker)
 nwalkers    = 30       ; Number of walkers
