--- a/examples/zehavi2001.config
+++ b/examples/zehavi2001.config
@@ -3,19 +3,32 @@
 #                         HALOMOD-FIT CONFIG FILE                              # 
 #                                                                              #  
 ################################################################################
-# This is a template configuration file halomod-fit. Specify each parameter    #
-# tailored to your application. All entries marked with ??? MUST be replaced   #
-# with the relevant argument. Any argument that is optional is clearly marked  #
+# This is a template configuration file for hmf-fit. Specify each parameter    #
+# tailored to your application. All optional arguments are clearly marked      #
 # and if you don't want it to be set, just put a "#" at the start of the line. #
 #                                                                              #  
 # The important part is the specification of the paramaters used in the fit.   #
-# This is done as a list of 4 elements. The first is a string encoding the     #
-# type of prior on the parameter (currently can take "flat" or "var").         #
-# The next two entries have meanings dependent on the type of prior. The 4th   #
-# gives an initial value for the MCMC chain for the parameter (make it as good #
-# a guess as possible). In summary, they have the following form:              #
-#      ["flat", min, max, guess]                                               #
-#      ["var", mean, std. dev.,guess]                                          #
+# This can be done in several ways. All parameters are specified as a list     #
+# containing information about the prior. The first element of the list is     #
+# always the type of prior distribution. This can take the values "unif",      #
+# "log" (a log-uniform distribution) or "norm". A "unif" distribution          #
+# is always specified as ["unif", min,max,guess], where <guess> is the initial #
+# guess for the fit. It can be set to None (note the capital N) for automatic  #
+# guessing. "log" takes the same arguments, except that each is in log-space.  #
+# "norm" will usually take the arguments ["norm", mean, stdev, guess].         #
+#                                                                              #
+# There is a major exception to the above, in the case of cosmological         #
+# parameters. These come under the heading CosmoParams. In addition to the     # 
+# above, these may take the distribution "cov", a multivariate normal          #   
+# distribution (this is specified simply as ["cov",guess]. The covariance      #
+# matrix for this distribution is specified by choosing a set of CMB results   #
+# for the covar_data parameter. If this is not set, an error will occur when   #
+# trying to use "cov" priors. Additionally, if covar_data is set, then "norm"  #
+# priors can be specified as ["norm",guess], where the mean and stdev will be  #
+# gotten from the same dataset.                                                #  
+#                                                                              # 
+# Any parameters that are specified in a sub-dictionary (eg. cosmo_params)     #
+# must be set under a section heading "<dictname>Params".                      #
 #                                                                              #
 # Finally the other parameters of the model, which are not varied, can be      #
 # specified under the Model section (with same variable names as in the        #
@@ -23,116 +36,147 @@
 ################################################################################
 
 # THIS IS SPECIFICALLY AN EXAMPLE FILE FOR RUNNING THE FIT FOR W_P(R_P) ON THE
-# SDSS DR7 DATA FROM ZEHAVI(2011). THE CORRESPONDING XI(R) AND COVARIANCE FILES
-# CAN BE FOUND IN THIS DIRECTORY. NOTE THAT R IS IN MPC, NOT MPC/H. 
+# SDSS DR7 DATA FROM ZEHAVI(2011) FOR LUMINOSITY THRESHOLD Mr <-20.5. 
+# THE CORRESPONDING wp(rp) AND COVARIANCE FILES CAN BE FOUND IN THIS DIRECTORY. 
 
 [Data] #########################################################################
-# data_file is a file with 2 (or optionally 3) columns. The first column is the 
-# ordinate values to fit to (eg. r), and the second is the values of the fitted
-# quantity (eg. xi). The third column, if present, is the std. dev., which will
-# be used to calculate the chi^2 likelihood if present. 
-# Importantly, the ordinate values should be in units without h-dependence.
-# This is so the fit can be adjusted (perhaps on the fly) to match the same
-# ordinate values. The fitted quantity should be in the same units as the 
-# HaloModel quantity.
-# If cov_file is present, it will be preferentially used to calculate the chi^2
-# likelihood. It should contain a square covariance matrix, the same length as
-# the data in data_file.
-data_file   = xir.example    ; 
-cov_file    = cov.example    ; OPTIONAL
+# * data_file: a file with 2 (or optionally 3) columns. The first column is the 
+#              ordinate values to fit to (eg. r), and the second is the values 
+#              of the fitted quantity (eg. xi). The third column, if present, 
+#              is the std. dev., which will be used to calculate the chi^2 
+#              likelihood if present. The ordinate and fitted values should be 
+#              in the same units as the relevant Framework quantity.
+# * cov_file: [OPTIONAL] if present, it will be preferentially used to calculate 
+#             the chi^2 likelihood. It should contain a square covariance matrix, 
+#             the same length as the data in ``data_file``.
+#===============================================================================
+data_file   = wprp.example    ; 
+# cov_file    = cov.example    ; OPTIONAL
+
+[Constraints] # ALL OPTIONAL ###################################################
+# Specify here any constraints to be placed on the output. This is specified as
+# the parameter name, with its value being a list of [val, stdev].
+#===============================================================================
+ng = [0.0318,0.0016]
 
 [RunOptions] ###################################################################
-# If relax is True, an error in calculation just results in -inf for the 
-# likelihood, rather than the whole thing crashing. This is pretty useless as it
-# stands, because errors are usually because of cosmology, and usually are 
-# uncatchable. 
-# nthreads specifies number of threads to use, but this will automatically get
-# set to 1 if CAMB is being used on each iteration (otherwise the program will
-# hang). 
-# quantity is the name of the quantity you want to fit (in the HaloModel class). 
-# der_params are a set of parameters you want to keep chains for as well (usually
-# derived parameters of the main calculation). Note that if any of these is a 
-# part of a dictionary in the HaloModel class, you must prefix it with the name
-# of the dictionary with a colon (see example below). These are written as they
-# would be in a python program, with square braces to form a list.
+# * framework: The full import path to the Framework class to be used (eg. could
+#             be hmf.Massfunction, or halomod.HaloModel). 
+# * relax:    if True, an error in calculation just results in -inf for the 
+#             likelihood, rather than the whole thing crashing. Note that this will 
+#             not catch errors in underlying C/fortran code (eg. in CAMB).
+# * nthreads: specifies number of threads to use, but this will automatically get
+#             set to 1 if CAMB is being used on each iteration (otherwise the 
+#             program will hang). Set to 0 for automatic discovery.
+# * xval:     The name of the ordinate quantity. Can take values [M,k,r] only.
+# * quantity: the name of the quantity to fit (in the ``framework`` class). 
+# * der_params: a set of parameters to keep chains for in addition to 
+#             ``quantity`` (usually derived parameters of the main calculation). 
+#             Note that if any of these is a part of a dictionary, it must be 
+#             prefixed with the name of the dictionary plus a colon (see 
+#             example below). These are written in python list syntax, with 
+#             square braces.
+# * store_class: if True, stores the entire ``framework`` instance as a pickle 
+#             file *on each iteration*. Only set True on very small debug runs
+#===============================================================================
+framework   = halomod.HaloModel  ; 
 relax       = False      ; 
-nthreads    = 8          ; Number of threads to use
-quantity    = projected_corr_gal  ; the name of the actual quantity to fit
-der_params  = ["hod_params:M_min","bias_effective","satellite_fraction","mass_effective"]
-store_class = False      ; Store entire class as pickle file (WARNING: may not be very portable)
+nthreads    = 0          ; 
+xval        = r          ; 
+quantity    = projected_corr_gal       ; 
+der_params  = ["bias_effective","mass_effective","satellite_fraction","hod_params:M_min"]
+store_class = False      ; 
 
 [MCMC] #########################################################################
-# Here the total number of samples will be nsamples*nwalkers
-# The burnin can be specified as an integer, or as a list of 3 numbers: [min,s,max]
-# In this case, min iterations will definitely be burnt in. Then it will try
-# to keep running until s*acorr < chain_length. Usual values of s may be ~5.
-# It will stop at max and continue with the main calculation, though this
-# may indicate an error
-
-nsamples    = 1000      ; Number of samples to run (per walker)
+# * nsamples: The number of samples *per walker* in the MCMC chain.
+# * nwalkers: An even number at least twice the number of parameters in the fit.
+#             The recommendation is to go as big as possible (~100).
+# * burnin:   The length of the burn-in period (per walker). It can be specified 
+#             as an integer, or as a list of 3 numbers: [min,s,max]
+#             In this case, min iterations will definitely be burnt in. 
+#             Then it will try to keep running until s*acorr < chain_length. 
+#             Usual values of s may be ~5. If this condition is met, burnin will
+#             stop and thereafter the samples will be kept. If max is reached,
+#             burnin will cease also, though this may indicate an error.
+#===============================================================================
+nsamples    = 300      ; Number of samples to run (per walker)
 burnin      = 0        ; Burnin size (per walker)
-nwalkers    = 30       ; Number of walkers
+nwalkers    = 50       ; Number of walkers
 
 [IO] ###########################################################################
-outdir      = results  ; Directory to write results to
-#prefix                ; Prefix to attach to output files (useful for multi-runs)
-chunks      = 0        ; How many samples to take before writing to file  
-verbose     = 1        ; How much info to write out (not really useful yet)
+# * outdir : Directory to write all results to (it will be created if necessary)
+# * chunks : How many samples to take before writing to file (per walker)
+# * verbose: integer specifying how much information to write out.
+#===============================================================================
+outdir      = results  ; 
+chunks      = 0        ; 
+verbose     = 1        ; 
 
-[CosmoParams] # ALL OPTIONAL ###################################################
-# Here you an set which cosmological parameters you want to be varied in the 
-# MCMC (typically none at all). NOTE: this doesn't set the fiducial cosmology,
-# just the parameters that are to be fitted (see below for fiducial model
-# parameters). These parameters can be specified as "flat" or "var" like any
-# parameter, but can also be "cov", which uses covariance information in their
-# prior. If so, the covar_data setting MUST BE SET, and should be either PLANCK,
-# WMAP9, WMAP5 or WMAP3.
+############## PARAMETERS TO BE FIT ############################################
+[cosmo_paramsParams] # ALL OPTIONAL ###################################################
+# Here the cosmological parameters to be fit can be set (typically none at all). 
+# NOTE: this doesn't set the fiducial cosmology, just the parameters that are to 
+# be fitted (see below for fiducial model parameters). 
+#
+# Read the heading text for information on how to set the priors. If "cov" is to
+# be used for any parameter, the covar_data setting MUST BE SET, and should be 
+# either Planck15,Planck13, WMAP9, WMAP7, WMAP5 or WMAP3.
+#===============================================================================
+#covar_data  = Planck13 ; 
 
-#covar_data  = PLANCK ; Cosmology to use for the covariance information
-
-#sigma_8     = ["flat", 0.1,    2,0.8]
-#n           = ["flat", 0.1,    1.5, 0.966]
-#H0          = ["flat", 50,     90, 70.0]
-#omegab_h2   = ["flat", 0.0025, 0.05, 0.02227]
-#omegac_h2   = ["flat", 0.05,   0.2, 0.1116]
-
-[hod_paramsParams] # ALL OPTIONAL ##############################################
-M_1         = ["flat", 10.85, 16.2, 13.396]
-alpha       = ["flat", 0.5,   1.9, 1.214]
+#sigma_8     = ["cov", 0.1,    2,0.8]
+#n           = ["cov", 0.966]
+#Ob0   	     = ["unif", 0.005, 0.1, 0.05]
+#Om0         = ["norm", 0.3]
 
 [OtherParams] # ALL OPTIONAL ###################################################
-#wdm_mass    = ["flat", 0.05,500, 200.0]
+# Any parameters to be fit that are passed directly to the ``framework`` can be 
+# set here. Parameters that are passed within dictionaries (model parameters)
+# must be set in their own section (see below)
+#===============================================================================
+#wdm_mass    = ["unif", 0.05,500, 200.0]
 
+
+[hod_paramsParams] # ALL OPTIONAL ##############################################
+# This provides an example of a fit-parameter section that will be sent to the
+# ``framework`` in a dictionary (called hod_params).
+#===============================================================================
+M_1         = ["unif", 10.85, 16.2, 13.43]
+M_0         = ["unif", 9.0, 15.0, 11.62]
+sig_logm    = ["unif", 0.001, 1.0, 0.17]
+alpha       = ["unif", 0.8,   1.5, 1.15]
+M_min       = ["unif", 10.0, 14.0, 12.14]
 
 [Model] ########################################################################
-#
-# Add here any arguments to send to the HaloModel constructor (ie. the base model)
-# This will be the fiducial model for all calculations. Below is an example of 
-# what this may look like. Any dictionary arguments must be given as they would in
-# a python script.
+# These parameters constitute the base model of the calculation. They can 
+# be specified individually (all values will try to be read in as python types, 
+# so dicts can be specified like they would in python), or as a single "pickle"
+# file, which contains a pickle output of a certain Framework instance with the
+# parameters already set. An example of such a file is output every time the 
+# fit is run.
+#===============================================================================
+# pickle_file =   ; OPTIONAL file with pickled model in it (overrides below options)
 
 scale_dependent_bias=True
 halo_exclusion=ng_matched
-lnk_min=-4
-lnk_max=2
+lnk_min=-8
+lnk_max=6
 dlnk=0.02
-omegab=0.05
-omegac=0.25
 n=0.95
 sigma_8=0.8
-H0=70.0
-z=0.0369
-hod_model=Zehavi05
+cosmo_params={"H0":70.0,"Om0":0.25,"Ob0":0.045}
+proj_limit=60.0
+z=0.07 ; this is a guess from their plot ?!
+hod_model=Zheng05
 transfer_fit=CAMB
 transfer_options={"transfer__kmax":300,"transfer__k_per_logint":15}
 nonlinear=True
-cm_relation=duffy
-bias_model=tinker10
-ng=0.005
-force_flat=True
+cm_relation=Duffy
+cm_params={"a":11.0,"b":0.13,"c":1.0,"ms":2.26e12}
+bias_model=Tinker10
 mf_fit=Tinker10
 nthreads_2halo=1
 dlog10m=0.04
-takahashi=1
+takahashi=False
 
 
