changed ng to mean_gal_den

--- a/examples/zehavi2001.config
+++ b/examples/zehavi2001.config
@@ -57,7 +57,7 @@ data_file   = wprp.example    ;
 # Specify here any constraints to be placed on the output. This is specified as
 # the parameter name, with its value being a list of [val, stdev].
 #===============================================================================
-ng = [0.0318,0.0016]
+mean_gal_den = [0.0318,0.0016]
 
 [RunOptions] ###################################################################
 # * framework: The full import path to the Framework class to be used (eg. could
