add integrated Framework to fitting scripts and example

--- a/examples/zehavi2001.config
+++ b/examples/zehavi2001.config
@@ -77,10 +77,10 @@ mean_gal_den = [0.0318,0.0016]
 #             example below). These are written in python list syntax, with 
 #             square braces.
 #===============================================================================
-framework   = halomod.HaloModel  ; 
+framework   = halomod.ProjectedCF  ; 
 relax       = False      ; 
 nthreads    = 0          ; 
-xval        = r          ; 
+xval        = rp         ; 
 quantity    = projected_corr_gal       ; 
 der_params  = ["bias_effective","mass_effective","satellite_fraction","hod_params:M_min"]
 
@@ -173,5 +173,6 @@ mf_fit=Tinker10
 nthreads_2halo=1
 dlog10m=0.04
 takahashi=False
+rnum = 50
 
 
