remove old example filename and add der_quants and fit_type

--- a/examples/zehavi2011.config
+++ b/examples/zehavi2011.config
@@ -76,6 +76,9 @@ mean_gal_den = [0.0318,0.0016]
 #             prefixed with the name of the dictionary plus a colon (see
 #             example below). These are written in python list syntax, with
 #             square braces.
+# * der_quants: a set of quantities to keep chains for in addition to
+#             ``quantity`` (not single parameters). Same rules as `der_params`,
+#             except this should be for quantities like `dndm` or `corr_gal_2h`.
 #===============================================================================
 framework   = halomod.ProjectedCF  ;
 relax       = False      ;
@@ -83,9 +86,14 @@ nthreads    = 0          ;
 xval        = rp         ;
 quantity    = projected_corr_gal       ;
 der_params  = ["bias_effective","mass_effective","satellite_fraction","hod_params:M_min"] ;
+der_quants  = [] ;
 
 [FitOptions] #==================================================================
-fit_type = ;
+# * fit_type: either 'opt', 'mcmc' or 'both'. Specifies whether to do downhill
+#             gradient optimization, full MCMC, or both, with the optimization
+#             setting the initial guess for the MCMC.
+#===============================================================================
+fit_type = opt;
 
 [MCMC] #========================================================================
 # * nsamples: The number of samples *per walker* in the MCMC chain.
