visual sorting of model parameters

--- a/examples/zehavi2011.config
+++ b/examples/zehavi2011.config
@@ -93,7 +93,7 @@ der_quants  = [] ;
 #             gradient optimization, full MCMC, or both, with the optimization
 #             setting the initial guess for the MCMC.
 #===============================================================================
-fit_type = opt;
+fit_type = both ;
 
 [MCMC] #========================================================================
 # * nsamples: The number of samples *per walker* in the MCMC chain.
@@ -107,16 +107,16 @@ fit_type = opt;
 #             stop and thereafter the samples will be kept. If max is reached,
 #             burnin will cease also, though this may indicate an error.
 #===============================================================================
-nsamples    = 300      ; Number of samples to run (per walker)
+nsamples    = 10      ; Number of samples to run (per walker)
 burnin      = 0        ; Burnin size (per walker)
-nwalkers    = 50       ; Number of walkers
+nwalkers    = 10       ; Number of walkers
 
 [IO] #==========================================================================
 # * outdir : Directory to write all results to (it will be created if necessary)
 # * chunks : How many samples to take before writing to file (per walker)
 #===============================================================================
 outdir      = results  ;
-chunks      = 0        ;
+chunks      = 2        ;
 
 ############## PARAMETERS TO BE FIT ############################################
 
@@ -164,25 +164,32 @@ M_min       = ["unif", 10.0, 14.0, 12.14]
 #===============================================================================
 # model_file =   ; OPTIONAL file with pickled model in it (overrides below options)
 
-scale_dependent_bias=True
-halo_exclusion=ng_matched
-lnk_min=-8
-lnk_max=6
-dlnk=0.02
+# ----- Cosmology ------
 n=0.95
 sigma_8=0.8
 cosmo_params={"H0":70.0,"Om0":0.25,"Ob0":0.045}
-proj_limit=60.0
-z=0.07 ; this is a guess from their plot ?!
+
+# ----- Models ------
+scale_dependent_bias=True
+halo_exclusion=ng_matched
 hod_model=Zheng05
 transfer_fit=CAMB
-transfer_options={"transfer__kmax":300,"transfer__k_per_logint":15}
 nonlinear=True
+takahashi=False
 cm_relation=Duffy
 cm_params={"a":11.0,"b":0.13,"c":1.0,"ms":2.26e12}
 bias_model=Tinker10
 mf_fit=Tinker10
-nthreads_2halo=1
+
+# ----- Accuracy/Timing -----
+lnk_min=-8
+lnk_max=6
+dlnk=0.02
+transfer_options={"transfer__kmax":300,"transfer__k_per_logint":15}
 dlog10m=0.04
-takahashi=False
 rnum = 50
+nthreads_2halo=1
+
+# ----- Survey ------
+proj_limit=60.0
+z=0.07 ; this is a guess from their plot ?!
