fixed example to current API

--- a/examples/zehavi2011.config
+++ b/examples/zehavi2011.config
@@ -3,7 +3,7 @@
 #                         HALOMOD-FIT CONFIG FILE                              #
 #                                                                              #
 ################################################################################
-# This is a template configuration file for hmf-fit. Specify each parameter    #
+# This is a template configuration file for halmod-fit. Specify each parameter #
 # tailored to your application. All optional arguments are clearly marked      #
 # and if you don't want it to be set, just put a "#" at the start of the line. #
 #                                                                              #
@@ -18,8 +18,8 @@
 # "norm" will usually take the arguments ["norm", mean, stdev, guess].         #
 #                                                                              #
 # There is a major exception to the above, in the case of cosmological         #
-# parameters. These come under the heading CosmoParams. In addition to the     #
-# above, these may take the distribution "cov", a multivariate normal          #
+# parameters. These come under the heading cosmo_paramsParams. In addition to  #
+# the above, these may take the distribution "cov", a multivariate normal      #
 # distribution (this is specified simply as ["cov",guess]. The covariance      #
 # matrix for this distribution is specified by choosing a set of CMB results   #
 # for the covar_data parameter. If this is not set, an error will occur when   #
@@ -111,6 +111,13 @@ nsamples    = 10      ; Number of samples to run (per walker)
 burnin      = 0        ; Burnin size (per walker)
 nwalkers    = 10       ; Number of walkers
 
+[Downhill] # ALL OPTIONAL ======================================================
+# ** kwargs : Here specify any arguments that can be passed to scipy's `minimize`
+#             routine. Whatever is not specified is left as default.
+#             Some common options are `disp`, `maxiter`, `method` and `tol`.
+#===============================================================================
+maxiter = 100
+
 [IO] #==========================================================================
 # * outdir : Directory to write all results to (it will be created if necessary)
 # * chunks : How many samples to take before writing to file (per walker)
@@ -170,25 +177,24 @@ sigma_8=0.8
 cosmo_params={"H0":70.0,"Om0":0.25,"Ob0":0.045}
 
 # ----- Models ------
-scale_dependent_bias=True
-halo_exclusion=ng_matched
+sd_bias_model=Tinker_SD05
+exclusion_model=NgMatched
 hod_model=Zheng05
-transfer_fit=CAMB
-nonlinear=True
+transfer_model=CAMB
+hc_spectrum=nonlinear
 takahashi=False
-cm_relation=Duffy
-cm_params={"a":11.0,"b":0.13,"c":1.0,"ms":2.26e12}
+concentration_model=Duffy08
+concentration_params={"a":11.0,"b":0.13,"c":1.0,"ms":2.26e12}
 bias_model=Tinker10
-mf_fit=Tinker10
+hmf_model=Tinker10
 
 # ----- Accuracy/Timing -----
 lnk_min=-8
 lnk_max=6
 dlnk=0.02
-transfer_options={"transfer__kmax":300,"transfer__k_per_logint":15}
+transfer_params={"transfer__kmax":300,"transfer__k_per_logint":15}
 dlog10m=0.04
 rnum = 50
-nthreads_2halo=1
 
 # ----- Survey ------
 proj_limit=60.0
