more samples by default

--- a/examples/zehavi2011.config
+++ b/examples/zehavi2011.config
@@ -93,7 +93,7 @@ der_quants  = [] ;
 #             gradient optimization, full MCMC, or both, with the optimization
 #             setting the initial guess for the MCMC.
 #===============================================================================
-fit_type = both ;
+fit_type = mcmc ;
 
 [MCMC] #========================================================================
 # * nsamples: The number of samples *per walker* in the MCMC chain.
@@ -107,9 +107,9 @@ fit_type = both ;
 #             stop and thereafter the samples will be kept. If max is reached,
 #             burnin will cease also, though this may indicate an error.
 #===============================================================================
-nsamples    = 10      ; Number of samples to run (per walker)
+nsamples    = 100      ; Number of samples to run (per walker)
 burnin      = 0        ; Burnin size (per walker)
-nwalkers    = 10       ; Number of walkers
+nwalkers    = 50       ; Number of walkers
 
 [Downhill] # ALL OPTIONAL ======================================================
 # ** kwargs : Here specify any arguments that can be passed to scipy's `minimize`
@@ -123,7 +123,7 @@ maxiter = 100
 # * chunks : How many samples to take before writing to file (per walker)
 #===============================================================================
 outdir      = results  ;
-chunks      = 2        ;
+chunks      = 10       ;
 
 ############## PARAMETERS TO BE FIT ############################################
 
