heaps of changes gah!

--- a/examples/zehavi2011.config
+++ b/examples/zehavi2011.config
@@ -57,7 +57,7 @@ data_file   = wprp.example    ;
 # Specify here any constraints to be placed on the output. This is specified as
 # the parameter name, with its value being a list of [val, stdev].
 #===============================================================================
-mean_gal_den = [0.00318,0.0016]
+mean_tracer_den = [0.00318,0.0016]
 
 [RunOptions] #==================================================================
 # * framework: The full import path to the Framework class to be used (eg. could
@@ -183,8 +183,8 @@ hod_model=Zheng05
 transfer_model=CAMB
 hc_spectrum=nonlinear
 takahashi=False
-concentration_model=Duffy08
-concentration_params={"a":11.0,"b":0.13,"c":1.0,"ms":2.26e12}
+halo_concentration_model=Duffy08
+halo_concentration_params={"a":11.0,"b":0.13,"c":1.0,"ms":2.26e12}
 bias_model=Tinker10
 hmf_model=Tinker10
 
