update hmf version to test

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,8 +36,9 @@ include_package_data = True
 package_dir =
     =src
 # Add here dependencies of your project (semicolon/line-separated), e.g.
+# TODO: hmf should be pinned to pypi version!
 install_requires =
-    hmf>=3.0.11
+    hmf>=3.0.11 @ git+git://github.com/steven-murray/hmf.git
     mpmath
     cached_property
     numpy
