--- a/setup.cfg
+++ b/setup.cfg
@@ -38,7 +38,7 @@ package_dir =
 # Add here dependencies of your project (semicolon/line-separated), e.g.
 # TODO: hmf should be pinned to pypi version!
 install_requires =
-    hmf>=3.0.11 @ git+git://github.com/steven-murray/hmf.git@colossus-integration
+    hmf @ git+git://github.com/steven-murray/hmf.git@colossus-integration
     mpmath
     cached_property
     numpy
