--- a/setup.cfg
+++ b/setup.cfg
@@ -65,6 +65,7 @@ tests =
     pytest-cov>=2.5.1
     pre-commit
     mpmath>=1.0.0
+    numba
 dev =
     Sphinx>=1.7.5
     numpydoc>=0.8.0
@@ -74,6 +75,7 @@ dev =
     pytest-cov>=2.5.1
     pre-commit
     mpmath>=1.0.0
+    numba
 
 ;[options.entry_points]
 ;# Add here console scripts like:
