--- a/.github/workflows/publish-to-pypi.yaml
+++ b/.github/workflows/publish-to-pypi.yaml
@@ -1,13 +1,10 @@
-name: Deploy
+name: Deploy to PyPI
 
-on:
-  push:
-    tags:
-      - 'v*'
+on: push
 
 jobs:
   build-n-publish:
-    name: To PyPI and TestPyPI
+    name: Deploy
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@master
@@ -26,9 +23,27 @@ jobs:
         run: |
           python -m pip install pep517 --user
           python setup.py --version
+      - name: Create setuptools_scm env variable
+        if: startsWith(github.ref, 'refs/tags/') != true
+        shell: bash
+        run: |
+          wget https://gist.github.com/plaplant/0902f09e59166bac742bbd554f3cd2f9/raw/make_dev_version.sh -O ../make_dev_version.sh
+          version=$(bash ../make_dev_version.sh)
+          echo "::set-env name=SETUPTOOLS_SCM_PRETEND_VERSION::$version"
       - name: Build a binary wheel and a source tarball
         run: python -m pep517.build --binary --source --out-dir dist .
+      # deploy to Test PyPI on any push except when merging to master, since that will
+      # already exist, and thus fail.
+      - name: Publish distribution 📦 to Test PyPI
+        if: ${{ !contains(github.ref, 'master') }}
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          password: ${{ secrets.pypi_password }}
+          repository_url: https://test.pypi.org/legacy/
+      # deploy to actual PyPI only when a tag is pushed (which should happen only
+      # automatically on master)
       - name: Publish distribution 📦 to PyPI
+        if: startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@master
         with:
           password: ${{ secrets.actual_pypi_password }}
