feat: add CLI based on hmf

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,6 @@ packages = find:
 include_package_data = True
 package_dir =
     =src
-# Add here dependencies of your project (semicolon/line-separated), e.g.
 # TODO: hmf should be pinned to pypi version!
 install_requires =
     hmf
@@ -78,10 +77,11 @@ dev =
     mpmath>=1.0.0
     numba
 
-;[options.entry_points]
-;# Add here console scripts like:
-;console_scripts =
-;     edges-analysis = edges_analysis.cli:main
+[options.entry_points]
+# Add here console scripts like:
+console_scripts =
+     halomod = halomod._cli:main
+
 
 [test]
 # py.test options when running `python setup.py test`
