--- a/setup.cfg
+++ b/setup.cfg
@@ -35,9 +35,8 @@ packages = find:
 include_package_data = True
 package_dir =
     =src
-# TODO: hmf should be pinned to pypi version!
 install_requires =
-    hmf
+    hmf>=3.2.0
     mpmath
     cached_property
     numpy
