--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,7 @@ include_package_data = True
 package_dir =
     =src
 install_requires =
-    hmf>=3.2.0
+    hmf @ git+git://github.com/steven-murray/hmf@hmf-run
     mpmath
     cached_property
     numpy
