--- a/.github/workflows/publish-to-pypi.yaml
+++ b/.github/workflows/publish-to-pypi.yaml
@@ -30,7 +30,7 @@ jobs:
         run: |
           wget https://gist.github.com/plaplant/0902f09e59166bac742bbd554f3cd2f9/raw/make_dev_version.sh -O ../make_dev_version.sh
           version=$(bash ../make_dev_version.sh)
-          echo "::set-env name=SETUPTOOLS_SCM_PRETEND_VERSION::$version"
+          echo "SETUPTOOLS_SCM_PRETEND_VERSION=$version" >> $GITHUB_ENV
       - name: Build a binary wheel and a source tarball
         run: python -m pep517.build --binary --source --out-dir dist .
       # deploy to Test PyPI on any push except when merging to master, since that will
@@ -41,8 +41,7 @@ jobs:
         with:
           password: ${{ secrets.pypi_password }}
           repository_url: https://test.pypi.org/legacy/
-      # deploy to actual PyPI only when a tag is pushed (which should happen only
-      # automatically on master)
+      # deploy to actual PyPI only when a tag is pushed (which should happen only on master)
       - name: Publish distribution 📦 to PyPI
         if: startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@master
