--- a/docs/environment.yaml
+++ b/docs/environment.yaml
@@ -12,6 +12,6 @@ dependencies:
   - scipy
   - astropy  # need this here, because we base classes off it (and docs need that).
   - pyyaml
-  - camb
+  - camb<=1.1.3
   - pip:
     - sphinx-rtd-theme
