maint: make it possible to install camb as an extra

--- a/setup.cfg
+++ b/setup.cfg
@@ -75,6 +75,8 @@ dev =
     pre-commit
     mpmath>=1.0.0
     numba
+all =
+    camb>1.0.0<2.0
 
 [options.entry_points]
 # Add here console scripts like:
