--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,9 @@
 [bumpversion]
-current_version = 2.0.2
+current_version = 2.0.0
+commit = False
+tag = False
+
+[bumpversion:file:VERSION]
 
 [metadata]
 name = halomod
