test: add pytest-plt dep

--- a/setup.cfg
+++ b/setup.cfg
@@ -58,6 +58,7 @@ tests =
 	coverage>=4.5.1
 	pytest>=3.5.1
 	pytest-cov>=2.5.1
+	pytest-plt
 	pre-commit
 	mpmath>=1.0.0
 	numba
@@ -68,6 +69,7 @@ dev =
 	coverage>=4.5.1
 	pytest>=3.5.1
 	pytest-cov>=2.5.1
+	pytest-plt
 	pre-commit
 	mpmath>=1.0.0
 	numba
