style: add ruff E, W, UP, I

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,3 +72,55 @@ norecursedirs = [
 	".tox",
 ]
 testpaths = "tests"
+
+[tool.ruff]
+line-length = 100
+target-version = "py39"
+
+[tool.ruff.lint]
+extend-select = [
+  "E",    # pycodestyle
+  "W",    # pycodestyle warning
+  "UP",   # pyupgrade
+#   "C90",  # mccabe complexity
+   "I",    # isort
+#   "N",    # pep8-naming
+#   "D",    # docstyle
+   # "ANN"   # type annotations
+   "B",    # bugbear
+#   "A",    # builtins
+#   "C4",   # comprehensions
+#   "DTZ",  # datetime
+#   "FA",   # future annotations
+#   "PIE",  # flake8-pie
+#   "T",    # print statements
+#   "PT",   # pytest-style
+#   "Q",    # quotes
+#   "SIM",  # simplify
+#   "PTH",  # use Pathlib
+#   "ERA",  # kill commented code
+#   "NPY",  # numpy-specific rules
+#   "PERF", # performance
+#   # "FURB", # refurb
+#   "RUF",  # ruff-specific rules
+]
+ignore = [
+    "DTZ007",   # use %z in strptime
+    "A003",     # class attribute shadows python builtin
+    "B008",     # function call in argument defaults
+]
+[tool.ruff.lint.per-file-ignores]
+"tests/*.py" = [
+    "D103",  # ignore missing docstring in tests
+    "T",     # print statements
+]
+"docs/conf.py" = [
+    "A",  # conf.py can shadow builtins
+    "ERA",
+]
+
+[tool.ruff.lint.pydocstyle]
+convention = 'numpy'
+
+[tool.ruff.lint.mccabe]
+max-complexity = 15
