--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,35 +17,21 @@ repos:
   - id: requirements-txt-fixer
   - id: mixed-line-ending
     args: ['--fix=no']
--   repo: https://github.com/PyCQA/flake8
-    rev: '3.9.2'  # pick a git hash / tag to point to
-    hooks:
-    -   id: flake8
-        additional_dependencies:
-          - flake8-rst-docstrings
-          - flake8-docstrings
-          - flake8-builtins
-          - flake8-logging-format
-          - flake8-rst-docstrings
-          - flake8-rst
-          - flake8-markdown
-          - flake8-bugbear
-          - flake8-comprehensions
-          - flake8-print
--   repo: https://github.com/psf/black
-    rev: 21.8b0
-    hooks:
-    - id: black
+
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  # Ruff version.
+  rev: v0.4.7
+  hooks:
+    # Run the linter.
+    - id: ruff
+      args: [--fix]
+
+    # Run the formatter.
+    - id: ruff-format
+
 -   repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.9.0
     hooks:
       - id: rst-backticks
-- repo: https://github.com/PyCQA/isort
-  rev: 5.9.3
-  hooks:
-  - id: isort
 
-- repo: https://github.com/asottile/pyupgrade
-  rev: v2.26.0
-  hooks:
-  -   id: pyupgrade
+
