--- a/.github/workflows/warnings-tests.yaml
+++ b/.github/workflows/warnings-tests.yaml
@@ -5,12 +5,9 @@ name: Warnings Tests
 # Also, only test on pull requests into master/dev.
 on:
   push:
-    tags-ignore:
-      - 'v*'
   pull_request:
     branches:
-      - 'master'
-      - 'dev'
+      - 'main'
 
 jobs:
   tests:
