ci: correct path for docs tests

--- a/.github/workflows/run-docs-code.yaml
+++ b/.github/workflows/run-docs-code.yaml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Run Notebook
         run: |
-          papermill -k sense docs/tutorials/${{ matrix.demo }}.ipynb output-${{ matrix.demo }}.ipynb
+          papermill -k sense docs/examples/${{ matrix.demo }}.ipynb output-${{ matrix.demo }}.ipynb
 
       - uses: actions/upload-artifact@v4
         if: always()
